# subtitle_detector

./: .gitignore  REFACTORING.md  pyproject.toml  t.py  test.py  test_refactored.py  video_ocr.py  video_ocr_old.py
core/: __init__.py  frame_renderer.py  ocr_engine.py  result_exporter.py  utils.py  video_processor.py
